welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: ';' expected but 'true' found.
if (estSurMessage) == true {
                      ^